# src/_generated/swagger.json
@@ -46,43 +46,7 @@
 				"parameters": []
 			}
 		},
-		"/user/exists/{id}": {
-			"get": {
-				"operationId": "UserExists",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"exists": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"exists"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/user/profile/{id}": {
+		"/user/profile/{email}": {
 			"get": {
 				"operationId": "GetProfile",
 				"responses": {
@@ -90,9 +54,32 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"post": {
+				"operationId": "UpdateProfile",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
 								"schema": {
-									"items": {},
-									"type": "array"
+									"type": "boolean"
 								}
 							}
 						}
@@ -102,7 +89,7 @@
 				"parameters": [
 					{
 						"in": "path",
-						"name": "id",
+						"name": "email",
 						"required": true,
 						"schema": {
 							"type": "string"
